--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html ng-app="blocJams">
-<head lang="en">
+  <head lang="en">
     <meta charset="UTF-8">
     <title>Bloc Jams Angular</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,8 +12,8 @@
     <link rel="stylesheet" type="text/css" href="/styles/collection.css">
     <link rel="stylesheet" type="text/css" href="/styles/album.css">
     <link rel="stylesheet" type="text/css" href="/styles/player_bar.css">
-</head>
-<body>
+  </head>
+  <body>
     <nav class="navbar"> <!-- navigation bar -->
       <a ui-sref="index" class="logo">
         <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo" class="logo">
@@ -25,6 +25,7 @@
 
     <ui-view></ui-view>
 
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.1.10/buzz.min.js"></script>
@@ -35,5 +36,6 @@
     <script src="/scripts/controllers/CollectionCtrl.js"></script>
     <script src="/scripts/controllers/AlbumCtrl.js"></script>
     <script src="/scripts/controllers/PlayerBarCtrl.js"></script>
-</body>
+    <script src="/scripts/directives/seekBar.js"></script>
+  </body>
 </html>
